--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,3 +1,36 @@
 body{
-    background-color: red;
+    height: 100vh;
+    margin: 0;
 }
+
+#main{
+    display: grid;
+    grid-template-columns: 300px 1fr;
+    grid-template-rows: 60px 1fr 80px;
+    height: 100%;
+}
+
+#header{
+    grid-row: 1/2;
+    grid-column: 1/3;
+    background: #1f1f1f;
+}
+
+#playLists{
+    grid-row: 2 / 3;
+    grid-column: 1 / 2;
+    background: #121212;
+}
+
+#content{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background: #181818;
+}
+
+#player{
+    grid-row: 3/4;
+    grid-column: 1/3;
+    background: #282828;
+}
+
