--- a/CSS/index.css
+++ b/CSS/index.css
@@ -14,6 +14,9 @@ body{
     grid-row: 1/2;
     grid-column: 1/3;
     background: #1f1f1f;
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 80px;
 }
 
 #playLists{
@@ -34,3 +37,10 @@ body{
     background: #282828;
 }
 
+/*Header*/
+
+#Home{
+    max-width: 80;
+    max-height: 80;
+    background: green;
+}
