--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,8 +15,10 @@ body{
     grid-column: 1/3;
     background: #1f1f1f;
     display: grid;
-    grid-template-rows: 1fr;
-    grid-template-columns: 50px, 400px;
+    grid-template-columns: 50px 400px; /* изменено */
+    align-items: center; /* добавлено */
+    padding: 0 20px; /* добавлено */
+    gap: 20px; /* добавлено */
 }
 
 #playLists{
@@ -43,12 +45,10 @@ div#Home{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 2%;
-    max-width: 50px;
-    max-height: 50px;
+    width: 50px;
+    height: 50px;
     border-radius: 100%;
     background: #FCB821;
-    align-self: center;
 }
 
 div#Home:hover{
@@ -62,10 +62,33 @@ div#Home:hover{
     height: 45px;
 }
 
-/*#homik:hover{
-    margin: 1px 0px 0px 2px;
-    width: 45px;
-    height: 45px;
-    transition: 2s ease;
-    transform: rotate(360deg);
-}*/
+/* Стили для поиска */
+div#Search{
+    display: flex;
+    align-items: center;
+}
+
+input#Search{
+    width: 100%;
+    max-width: 400px; /* ограничиваем максимальную ширину */
+    height: 40px;
+    background-color: #4f4f4f;
+    border-radius: 25px; /* скругленные углы */
+    border: none;
+    padding: 0 20px;
+    font-size: 16px;
+    color: #fff;
+    outline: none;
+    box-sizing: border-box;
+}
+
+/* Дополнительные стили для placeholder */
+input#Search::placeholder {
+    color:#948F8F;
+    font-size: 14px;
+}
+
+/* Эффект при фокусе */
+input#Search:focus {
+    border: 2px solid #fff;
+}
