--- a/CSS/index.css
+++ b/CSS/index.css
@@ -44,7 +44,7 @@ body{
 div#Home{
     display: flex;
     justify-content: center;
-    align-items: center;
+    
     width: 50px;
     height: 50px;
     border-radius: 100%;
@@ -68,6 +68,15 @@ div#Search{
     align-items: center;
 }
 
+#Search #icon {
+    position: relative;
+    left: 40px;
+    width: 30px; 
+    height: 30px;
+    pointer-events: none; /* чтобы не мешала клику в input */
+    filter: brightness(3);
+}
+
 input#Search{
     width: 100%;
     max-width: 400px; /* ограничиваем максимальную ширину */
@@ -75,18 +84,19 @@ input#Search{
     background-color: #4f4f4f;
     border-radius: 25px; /* скругленные углы */
     border: none;
-    
-    padding: 0 20px;
+    padding: 0 50px;
     font-size: 16px;
     color: #fff;
     outline: none;
     box-sizing: border-box;
+    padding-top: 4px;
 }
 
 /* Дополнительные стили для placeholder */
 input#Search::placeholder {
     color:#948F8F;
-    font-size: 14px;
+    font-size: 16px;
+    padding-bottom: 0px 100px;
 }
 
 /* Эффект при фокусе */
