--- a/CSS/content.css
+++ b/CSS/content.css
@@ -41,28 +41,31 @@
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(4px);
-    transition: 0.2s;
+    transition: 0.2s, transform 0.2s;
 }
 
 .arrow img {
-    width: 20px;
-    height: 20px;
-    filter: brightness(1.3);
+    width: 25px;
+    height: 25px;
+    
 }
 
+/* При наведении светлее и чуть увеличивается */
 .arrow:hover {
-    background: rgba(0,0,0,0.65);
+    background: rgba(66, 66, 66, 0.2); /* светлее фон */
+    transform: translateY(-50%) scale(1.05); /* чуть увеличиваем */
 }
 
 /* левая стрелка */
 .arrow.left {
-    left: -20px; /* можно подправить */
+    left: -20px;
 }
 
 /* правая стрелка */
 .arrow.right {
     right: -20px;
 }
+
 
 /* Горизонтальная лента плейлистов */
 .playlist-row {
@@ -85,6 +88,15 @@
 
 .playlist-row::-webkit-scrollbar-track {
     background: #222;
+}
+
+/* Скрываем горизонтальный scrollbar в playlist-row */
+.playlist-row {
+    scrollbar-width: none; /* Firefox */
+}
+
+.playlist-row::-webkit-scrollbar {
+    display: none; /* Chrome/Safari */
 }
 
 /* Карточка плейлиста */
@@ -156,3 +168,4 @@
 #content::-webkit-scrollbar-thumb:hover {
     background: #ffa733;
 }
+
