--- a/CSS/content.css
+++ b/CSS/content.css
@@ -1,16 +1,13 @@
-/* Основная область */
 #content {
     padding: 20px 30px;
     color: white;
     overflow-y: auto;
 }
 
-/* Отступы между секциями */
 .section {
     margin-bottom: 40px;
 }
 
-/* Заголовок секции + стрелка */
 .section-header {
     display: flex;
     justify-content: space-between;
@@ -50,24 +47,21 @@
     
 }
 
-/* При наведении светлее и чуть увеличивается */
 .arrow:hover {
-    background: rgba(66, 66, 66, 0.2); /* светлее фон */
-    transform: translateY(-50%) scale(1.05); /* чуть увеличиваем */
+    background: rgba(66, 66, 66, 0.2); 
+    transform: translateY(-50%) scale(1.05);
 }
 
-/* левая стрелка */
 .arrow.left {
     left: -20px;
 }
 
-/* правая стрелка */
 .arrow.right {
     right: -20px;
+    
 }
 
 
-/* Горизонтальная лента плейлистов */
 .playlist-row {
     display: flex;
     gap: 20px;
@@ -76,7 +70,6 @@
     scroll-behavior: smooth;
 }
 
-/* стили скроллбара у строки */
 .playlist-row::-webkit-scrollbar {
     height: 8px;
 }
@@ -90,7 +83,6 @@
     background: #222;
 }
 
-/* Скрываем горизонтальный scrollbar в playlist-row */
 .playlist-row {
     scrollbar-width: none; /* Firefox */
 }
@@ -99,7 +91,6 @@
     display: none; /* Chrome/Safari */
 }
 
-/* Карточка плейлиста */
 .card {
     min-width: 180px;
     background: #181818;
@@ -113,7 +104,6 @@
     background: #222;
 }
 
-/* Картинка */
 .card-cover {
     width: 100%;
     height: 180px;
@@ -132,7 +122,6 @@
     color: #bbbbbb;
 }
 
-/* Футер */
 #footer {
     margin-top: 40px;
     padding-top: 20px;
@@ -150,7 +139,6 @@
     color: #ffa733;
 }
 
-/* === Скроллбар для левого сайдбара === */
 #content::-webkit-scrollbar {
     width: 10px;
 }
@@ -161,7 +149,7 @@
 }
 
 #content::-webkit-scrollbar-thumb {
-    background: #ff8c00; /* оранжевый */
+    background: #ff8c00;
     border-radius: 10px;
 }
 
