--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,10 +15,10 @@ body{
     grid-column: 1/3;
     background: #1f1f1f;
     display: grid;
-    grid-template-columns: 50px auto auto; /* изменено */
-    align-items: center; /* добавлено */
-    padding: 0 20px; /* добавлено */
-    gap: 50px; /* добавлено */
+    grid-template-columns: 50px auto auto;
+    align-items: center;
+    padding: 0 20px;
+    gap: 50px;
 }
 
 #playLists{
