--- a/CSS/Registor.css
+++ b/CSS/Registor.css
@@ -16,8 +16,8 @@ body {
   text-align: center;
 }
 
-h1 {
-  font-size: 24px;
+.container h1 {
+  font-size: 56px;
   margin-bottom: 30px;
 }
 
@@ -25,7 +25,7 @@ h1 {
   width: 100%;
   padding: 12px;
   margin-bottom: 15px;
-  border: none;
+ 
   border-radius: 15px;
   font-size: 16px;
 }
@@ -60,5 +60,5 @@ h1 {
 
 .login-link a {
   color: #FCB821;
-  text-decoration: none;
+  
 }
