--- a/CSS/sidebar.css
+++ b/CSS/sidebar.css
@@ -30,6 +30,11 @@
     transition: 0.2s;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .playlist-item:hover {
     background: #1a1a1a;
 }
