--- a/CSS/Registor.css
+++ b/CSS/Registor.css
@@ -25,10 +25,38 @@ body {
   width: 100%;
   padding: 12px;
   margin-bottom: 15px;
- 
+  border: 2px solid #333;
   border-radius: 15px;
   font-size: 16px;
+  background-color: #000;
+  color: #fff;
+  box-sizing: border-box;
+  transition: border-color 0.3s;
 }
+
+.input:focus {
+  outline: none;
+  border-color: #FCB821;
+}
+
+.input.error {
+  border-color: #ff0000;
+}
+
+.input:focus.error {
+  border-color: #ff0000;
+}
+
+.error-message {
+  color: #ff0000;
+  font-size: 12px;
+  margin-top: -10px;
+  margin-bottom: 10px;
+  text-align: left;
+  padding-left: 10px;
+  font-family: Arial, sans-serif;
+}
+
 .next-btn {
   width: 100%;
   padding: 12px;
@@ -46,7 +74,6 @@ body {
   transform: scale(1.05);
 }
 
-
 .divider {
   height: 1px;
   background-color: #333;
@@ -60,5 +87,10 @@ body {
 
 .login-link a {
   color: #FCB821;
-  
+  text-decoration: none;
 }
+
+.login-link a:hover {
+  text-decoration: underline;
+}
+
