--- a/CSS/footer.css
+++ b/CSS/footer.css
@@ -14,6 +14,9 @@
     width: 300px;
 }
 
+
+
+
 #track-cover {
     width: 55px;
     height: 55px;
@@ -39,7 +42,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 40%;
+    
+    width: 100%;
 }
 
 #controls {
@@ -130,7 +134,6 @@ input[type="range"]::-moz-range-thumb {
     cursor: pointer;
 }
 
-/* Firefox: трек (делаем прозрачным, фон будет через background у самого input) */
 input[type="range"]::-moz-range-track {
     background: transparent;
     height: 6px;
@@ -140,3 +143,25 @@ input[type="range"]::-moz-range-track {
     background: linear-gradient(90deg, #FCB821 0%, #FCB821 0%, #ffffff 0%, #ffffff 100%);
 }
 
+@media screen and (max-width: 800px) {
+
+    #player-center{
+        width: 100%;
+        padding: 0 30px;
+    }
+    #player-right{
+        width: 100px;
+   }
+   #volume {
+        width: 70px;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #player-left{
+        width: 60px;
+    }
+    #track-info{
+        display: none;
+   }
+}
