--- a/CSS/contentPleyList.css
+++ b/CSS/contentPleyList.css
@@ -1,9 +1,13 @@
+.contentPlaylist {
+    padding: 0;
+   background-color:#181818;
+}
 #playlistHeader {
     display: flex;
     align-items: center;
     gap: 30px;
     padding: 30px;
-    min-width: 450;
+    
     background: linear-gradient(to top,#1f1f1f 0%,#3a2f1f 25%,#7a4f1f 50%,#c97f1f 75%,#FCB821 100%);
 
     color: white;
@@ -45,7 +49,7 @@
 
 .track {
     display: grid;
-    grid-template-columns: 40px 2fr 1.5fr 1fr;
+    grid-template-columns: 40px 2fr 1.5fr 1fr 1fr;
     align-items: center;
     background-color: #202020;
     padding: 10px 15px;
@@ -63,6 +67,21 @@
     color: #b3b3b3;
     text-align: center;
     transition: opacity 0.2s;
+}
+.track-trash{
+    width: 22px;
+    filter: brightness(0) invert(1);
+    justify-self: end;
+    cursor: pointer; 
+    transition: transform 0.2s;
+}
+.track-trash {
+    cursor: pointer;
+    transition: transform 0.2s; 
+}
+
+.track-trash:hover {
+    opacity: 0.8;
 }
 
 .track::before {
@@ -209,4 +228,17 @@
 }
 
 
+@media screen and (max-width: 832px) {
+    #new-playlist-modal {
+       
+        top: 50%;
+        left: 110px;
+        
+}
+.modal-content {
 
+    width: 230px;
+    
+
+}
+}
